# shader_editor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build_libvpx.cmd  build_libvpx_msys2.sh  build_libvpx_vc142.cmd  build_libvpx_vc16.cmd  build_mp4v2_vc142.cmd  pre.js  settings.js  shell.html
assets/: basic.frag  basic.vert  default.frag  default.vert  glslsandbox.glsl  image.glsl  include_test.glsl  raymarching.glsl
assets/lib/: color.glsl
default/: copy.glsl  frag.glsl  pre_shadertoy.glsl  vert.glsl
src/: app.cpp  app.hpp  app_log.cpp  app_log.hpp  buffers.cpp  buffers.hpp  common.hpp  default_shader.hpp  file_utils.cpp  file_utils.hpp  h264_encoder.cpp  h264_encoder.hpp  image.cpp  image.hpp  main.cpp  mp4muxer.c  mp4muxer.h  mymkvwriter.cpp  mymkvwriter.hpp  platform.cpp  platform.hpp  recording.cpp  recording.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_files.cpp  shader_files.hpp  shader_program.cpp  shader_program.hpp  shader_utils.cpp  shader_utils.hpp  webm_encoder.cpp  webm_encoder.hpp
